# stratepig-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
src/: board.rs  client.rs  config.rs  constants.rs  error.rs  gameroom.rs  macros.rs  main.rs  packet.rs  player.rs  test_util.rs  util.rs
src/game/: game.rs  mod.rs  send.rs  start.rs  win.rs
src/lobby/: mod.rs  send.rs  settings.rs
stratepig_cli/: Cargo.toml
stratepig_cli/src/: lib.rs
stratepig_core/: Cargo.toml
stratepig_core/src/: buffer.rs  error.rs  lib.rs  packet.rs  server.rs
stratepig_derive/: Cargo.toml
stratepig_game/: Cargo.toml
stratepig_game/src/: board.rs  interaction.rs  lib.rs  pig.rs  test_util.rs
stratepig_macros/: Cargo.toml
stratepig_macros/src/: lib.rs
stratepig_server/: client.rs  error.rs  gameroom.rs  guard.rs  log_init.rs  macros.rs  main.rs  packet.rs  player.rs  util.rs  win.rs
stratepig_server/game/: game.rs  mod.rs  operations.rs  send.rs  start.rs  win.rs
stratepig_server/lobby/: mod.rs  send.rs  settings.rs
stratepig_updater/: .gitignore  Dockerfile  mix.exs
stratepig_updater/lib/stratepig_updater/: application.ex  download.ex  updater.ex
stratepig_updater/lib/stratepig_updater/routers/: game.ex  launcher.ex
stratepig_updater/lib/stratepig_updater/utils/: files.ex  version.ex
