[package]
name = "stratepig-server"
version = "0.1.0"
authors = ["Miapolis <41233357+Miapolis@users.noreply.github.com>"]
edition = "2018"

[workspace]
members = [
    "stratepig_core",
]

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
async-scoped = { version = "0.6.1", features = ["use-tokio"] }
parking_lot = "0.11.1"
futures = "0.1.31"
rand = "0.8.0"
vec_map = "0.8.2"
lazy_static = "1.4.0"
owning_ref = "0.4.1"
clap = "2.33.3"
log = "0.4.14"
simplelog = "0.10.0"
stratepig_core = { path = "./stratepig_core" }