[package]
name = "stratepig-server"
version = "0.6.9"
authors = ["Miapolis <41233357+Miapolis@users.noreply.github.com>"]
edition = "2018"

[[bin]]
bench = false
path = "stratepig_server/main.rs"
name = "stratepig_server"

[workspace]
members = [
    "stratepig_cli",
    "stratepig_core",
    "stratepig_macros",
    "stratepig_game",
]

[dependencies]
stratepig_cli = { path = "./stratepig_cli" }
stratepig_core = { path = "./stratepig_core" }
stratepig_macros = { path = "./stratepig_macros" }
stratepig_game = { path = "./stratepig_game" }

message-io = { version = "0.14.2", default-features = false, features = ["tcp"] }
tokio = { version = "1.5.0", features = ["full"] }
async-scoped = { version = "0.6.1", features = ["use-tokio"] }
serde = { version = "1.0.63", features = ["derive"] }
ctrlc = { version = "3.1.9", features = ["termination"] }
parking_lot = "0.11.1"
futures = "0.1.31"
rand = "0.8.0"
vec_map = "0.8.2"
lazy_static = "1.4.0"
owning_ref = "0.4.1"
log = "0.4.14"
simplelog = "0.10.0"
bincode = "1.3.3"