[package]
name = "stratepig_macros"
version = "0.1.0"
authors = ["Miapolis <41233357+Miapolis@users.noreply.github.com>"]
edition = "2018"

[dependencies]
stratepig_core = { path = "../stratepig_core" }
bincode = "1.3.3"
serde = { version = "1.0.63", features = ["derive"] }
quote = "1.0.9"
syn = "1.0.73"

[lib]
proc-macro = true